<resources>
    <string name="app_name">Projet Libre</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="cpassword">Confirme password</string>
    <string name="singin">SING IN</string>
    <string name="forgotpassword">FORGOT PASSWORD</string>
    <string name="id">ID</string>
    <string name="date_arrive">Date Fin</string>
    <string name="date_depart">Date Debut</string>
    <string name="telephone">Telephone</string>
    <string name="delete">Delete</string>
    <string name="register">Register</string>
    <string name="add_user">Add User</string>
    <string name="datefin">Date fin</string>
    <string name="updateuser">Update User</string>
    <string name="update_user">Update</string>
    <string-array name="listarrayy">
        <item> Belarbi Oussama </item>
        <item> Morsou Doae </item>
        <item> Mouhib Sanaâ </item>
        <item> Laftif yousra </item>
        <item> Belarbi Ali </item>
        <item> Stitou Yahya </item>
        <item> Malak Alaoui </item>
    </string-array>
    <string-array name="listadmin">
        <item> Belarbi Oussama </item>
        <item> Morsou Doae </item>
        <item> Mouhib sanaâ </item>
    </string-array>
    <string name="title_activity_main_list_pdf">MainActivity_list_pdf</string>
    <string name="emessage">Envoye message</string>
    <string name="dconge">Demande Conge</string>
    <string name="welcome">Welcome</string>
    <string name="lclient">List Client</string>
    <string name="ajouter">Ajouter</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_list_message">ListMessage</string>
</resources>