<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".View.Register">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/blue_bg">

        <ImageView
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />
      </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Ajouter User"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/idft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/firstname"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/idlt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/lastname"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idft"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/idem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idlt"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/idtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/telephone"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idem"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/idms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="mission"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"

            app:layout_constraintTop_toBottomOf="@+id/idtl"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/idpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idms"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/cpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/idpw"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpassword"
            tools:ignore="MissingConstraints">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android.support.design:layout_constraintTop_toTopOf="parent">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                  <ImageView
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:layout_marginTop="1dp"
                      android:foregroundGravity="center"
                      android:onClick="Calclick"
                      android:padding="2dp"
                      android:src="@drawable/cal"
                      tools:ignore="TouchTargetSizeCheck">
                  </ImageView>

                  <EditText
                      android:id="@+id/date_dep"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@drawable/blue_border_rounded_cornwe"
                      android:enabled="false"
                      android:fontFamily="@font/poppins_regular"
                      android:hint="@string/date_depart"
                      android:inputType="text"
                      android:maxLines="1"
                      android:paddingLeft="17dp"
                      android:paddingTop="11dp"
                      android:paddingBottom="11dp"
                      android:textCursorDrawable="@drawable/cursor_color"
                      android:textSize="12sp"
                      tools:ignore="MissingConstraints" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                  <ImageView
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:layout_marginTop="1dp"
                      android:foregroundGravity="center"
                      android:onClick="Calclick"
                      android:padding="2dp"
                      android:src="@drawable/cal">
                  </ImageView>

                  <EditText
                      android:id="@+id/id_datefin"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@drawable/blue_border_rounded_cornwe"
                      android:enabled="false"
                      android:fontFamily="@font/poppins_regular"
                      android:hint="@string/date_arrive"
                      android:inputType="text"
                      android:maxLines="1"
                      android:paddingLeft="17dp"
                      android:paddingTop="11dp"
                      android:paddingBottom="11dp"
                      android:textCursorDrawable="@drawable/cursor_color"
                      android:textSize="12sp"
                      tools:ignore="MissingConstraints" />
                </LinearLayout>

              </LinearLayout>

            </LinearLayout>

          </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="MissingConstraints">

          <Button
              android:id="@+id/btn_add_user"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@drawable/blue_fill__rounded_color"
              android:fontFamily="@font/poppins_regular"
              android:onClick="OnaddUsers"
              android:text="@string/add_user"
              android:textColor="#ffffff"
              android:textSize="12sp"
              tools:ignore="MissingConstraints" />

          <Button
              android:id="@+id/btn_back"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@drawable/blue_fill__rounded_color"
              android:fontFamily="@font/poppins_regular"
              android:gravity="center"
              android:text="Back"
              android:textColor="#ffffff"
              android:textSize="12sp"
              tools:ignore="InvalidId" />
        </LinearLayout>


      </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

  </LinearLayout>

</RelativeLayout>