<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutheader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_bg">

                <ImageView
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/logo" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/blue_border_rounded_cornwe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">
                    <!-- INPUT -->
                    <EditText
                        android:id="@+id/username_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/username_icon"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/username_icon"
                        android:layout_width="14.7dp"
                        android:layout_height="12.3dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:src="@drawable/email" />

                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/blue_border_rounded_cornwe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">
                    <!-- INPUT -->
                    <EditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/password_icon"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="17dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="12sp" />
                    <!-- Image font -->
                    <ImageView
                        android:id="@+id/password_icon"
                        android:layout_width="14.7dp"
                        android:layout_height="12.3dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:src="@drawable/password" />


                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_vertical|center|center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/blue_fill__rounded_color"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:onClick="OnLogin"
                        android:text="@string/Login"
                        android:textColor="#ffffff"
                        android:textSize="12sp"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

                <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="50dp"
                    android:layout_paddingLeft="35dp"
                    android:layout_weight="-7"
                    android:fontFamily="@font/poppins_medium"
                    android:text="SING IN "
                    android:textColor="#1566e0"
                    android:textSize="10.5sp" />
            -->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/forgotpassword"
                        android:textColor="#1566e0"
                        android:textSize="10.5sp" />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="40dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="end"
                        android:text="@string/singin"
                        android:textColor="#1566e0"
                        android:textSize="10.5sp" />
                    <!-- android:onClick="onClick"-->


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="or"
                    android:textColor="#aeaeae"
                    android:textSize="13.3sp"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_vertical|center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:foregroundGravity="center|center_horizontal"
                        android:padding="2dp"
                        android:src="@drawable/fb">

                    </ImageView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:foregroundGravity="center|center_horizontal"
                        android:padding="2dp"
                        android:src="@drawable/linkedin">

                    </ImageView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:foregroundGravity="center|center_horizontal"
                        android:padding="2dp"
                        android:src="@drawable/twitter">

                    </ImageView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:foregroundGravity="center|center_horizontal"
                        android:padding="2dp"
                        android:src="@drawable/instagram">

                    </ImageView>


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>